components/cryostat/namespace-cryostat.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cryostat
  annotations:
    argocd.argoproj.io/sync-options: Delete=false
    argocd.argoproj.io/sync-wave: '-10'
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    istio.io/rev: ossm2
