components/cryostat/peerauthentication-disable-mtls-cryostat-ui.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-mtls-cryostat-ui
spec:
  mtls:
    mode: STRICT
  portLevelMtls:
    '4180':
      mode: DISABLE
  selector:
    matchLabels:
      app: cryostat
      component: cryostat
