components/cryostat/service-cryostat-headless.yaml
# needed for cryostat agent in istio with mtls enabled for pod-to-pod communication
kind: Service
apiVersion: v1
metadata:
  name: cryostat-headless
  namespace: cryostat
spec:
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 4180
      targetPort: 4180
    - name: http-cryostat-agent
      protocol: TCP
      port: 8282
      targetPort: 8282
  selector:
    app: cryostat
    component: cryostat
