components/cryostat/sidecar-allow-any-outbound.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: allow-any-outbound
  namespace: cryostat
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  outboundTrafficPolicy:
    mode: ALLOW_ANY
