components/cryostat/sidecar-cryostat.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: cryostat
  namespace: cryostat
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  workloadSelector:
    labels:
      app: cryostat
      component: cryostat
  outboundTrafficPolicy:
    mode: ALLOW_ANY
