components/cryostat/networkpolicy-allow-cryostat-operator.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-cryostat-operator
  namespace: cryostat
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cryostat-operator
  policyTypes:
    - Ingress
