components/cryostat/networkpolicy-allow-istio-system.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-istio-system
  namespace: cryostat
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
  policyTypes:
    - Ingress
